2002-05-09  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-command.h: added GDA_COMMAND_TYPE_SCHEMA.

	* libgda/gda-data-model.[ch]: added get/set for command text and type.

	* libgda/gda-field.c (gda_field_set_caption): changed assertion. The
	function returns void.

	* libgda/gda-recordset.c: removed get/set for command text and type.

	* providers/postgres/gda-postgres-provider.c:
	* providers/postgres/gda-postgres-recordset.[ch]:
	* providers/postgres/gda-postgres-recordset.h:
	* providers/postgres/gda-postgres.h:
	* providers/postgres/utils.c: use GdaDataModel instead of
	GdaRecordset.

	* testing/models.c: changed some GDA_IS_RECORDSET by GDA_IS_DATA_MODEL
	and gda_recordset_get_command* by gda_data_model_get_command*.

2002-05-07  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c: added writing configuration file support.

	* libgda/gda-row.c (gda_row_get_attributes_length): allow NULL
	parameter for empty rows.

2002-05-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-row.[ch]: converted GdaRow to an opaque type, not
	a GList.
	(gda_row_get_id): new function.
	(gda_row_set_id): new function.

	* libgda/gda-data-model.[ch]: added new signals to this class,
	"begin_edit", "end_edit" and "cancel_edit", for editing data models
	returned by providers.
	(gda_data_model_begin_edit): new function.
	(gda_data_model_cancel_edit): new function.
	(gda_data_model_end_edit): new function.

2002-05-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-row.[ch]: moved GdaField* stuff...
	
	* libgda/gda-field.[ch]: ...to here.
	(gda_field_attributes_get_caption): new function.
	(gda_field_attributes_set_caption): new function.
	(gda_field_get_caption): new function.
	(gda_field_set_caption): new function.
	(gda_field_attributes_new): initialize 'caption' member.
	(gda_field_attributes_free): free 'caption' member.
	
	* libgda/libgda.h:
	* libgda/Makefile.am: added new header files.

	* doc/C/*: added new API header file.
